# cs226-final-project

./: .gitignore  CMakeLists.txt  README.md
shaders/: CMakeLists.txt  compute_c.glsl
source/: compute.c  compute.h  graphics.c  graphics.h  main.c  mem.c  mem.h  renderer.c  renderer.h  texture_renderer.c  texture_renderer.h  window.c  window.h
